--- a/milestone6/about.html
+++ b/milestone6/about.html
@@ -4,29 +4,28 @@
 <head>
     <title>Final Project Implementation</title>
     <meta charset="utf-8">
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <div id="wrapper">
-            <nav>
-                <h2><a href="index.html">ROOKIE CODING</a></h2>
-                <ul>
-                    <li><a href="index.html"><mark id="homepage">Home</mark></a></li>
-                    <li><a href="about.html"><mark id="aboutpage">About</mark></a></li>
-                    <li><a href="contact.html"><mark id="contactpage">Contact</mark></a></li>
-                    <li><a href="blog.html"><mark id="blogpage">Blog</mark></a></li>
-                    <li><a href="projects.html"><mark id="projectspage">Projects</mark></a></li>
-                </ul>
-            </nav>
-            <div id = "">
+        <nav>
+            <h2><a href="index.html">ROOKIE CODING</a></h2>
+            <ul>
+                <li><a href="index.html"><mark id="homepage">Home</mark></a></li>
+                <li><a href="about.html"><mark id="aboutpage">About</mark></a></li>
+                <li><a href="contact.html"><mark id="contactpage">Contact</mark></a></li>
+                <li><a href="blog.html"><mark id="blogpage">Blog</mark></a></li>
+                <li><a href="projects.html"><mark id="projectspage">Projects</mark></a></li>
+            </ul>
+        </nav>
+        <div id="">
 
-            </div>
-        <div id = "">
         </div>
-        <section id = "middle_bar">
+        <div id="">
+        </div>
+        <section id="middle_bar">
             <p>
                 Who? What? Why? Find the answers below!
             </p>
@@ -36,20 +35,69 @@
         </section>
         <main>
             <div id="main">
-                <div class = "questions">
+                <div class="questions">
                     <h3>Who am I?</h3>
                 </div>
-                <div class = "questions">
+                <div class="answers">
+                    <p>
+                        Name: Ethan Lee
+                        State: Minnesota
+                        Currently: Master's student at Utah Tech University
+                    </p>
+                    <p>
+                        Taking CompSci in CTE to supplement my skills
+                        Never really a coding guru and was always intimidated,
+                        but you can build cool stuff with coding and it would look good on
+                        my resume: we're a high-tech, wired-up world now
+                        Post photo of Minnesota that you can find in stock photos or whatever
+                        Also have a Wix blog named Rookie De-Fi, which you can check out <a href="">here</a>
+                    </p>
+                </div>
+                <div class="questions">
                     <h3>Why did I post this site?</h3>
                 </div>
-                <div class = "questions">
+                <div class="answers">
+                    <p>
+                        Both assignment and opportunity to document my learning journey
+                        Keeps me somewhat accountable on my learning journey and coding projects, too
+                        Getting Master's in Technical Writing, and this provides more practice with an actual
+                        audience than writing memos to my professor (a literal seasoned English PhD, which is a narrow
+                        audience indeed) would
+                        Restating difference between theory and practice debate all over again, but made manifest this
+                        time
+                    </p>
+                </div>
+                <div class="questions">
                     <h3>What can you expect here?</h3>
                 </div>
-                <div class = "questions">
+                <div class="answers">
+                    <p>
+                        Puzzles, games, and hot takes -- all from an amateur, of course
+                        Don't expect miracles or professional stuff, though.
+                        Also, be patient with me if I'm wrong or off-base about anything!
+                    </p>
+                </div>
+                <div class="questions">
                     <h3>How does this site work?</h3>
                 </div>
-                <div class = "questions">
+                <div class="answers">
+                    <p>
+                        Simple website built with HTML5 for webpages and CSS for external stylesheet
+                        First website I ever built from scratch, so in case the difference between my first try and web
+                        designers' slick, professional branding is apparent... that's why
+                        Ultimately, I'm a simple man. Do more than the bare minimum, though I like to avoid flash,
+                        frills, and other ostentatiousness
+                    </p>
+                </div>
+                <div class="questions">
                     <h3>How can you contact me?</h3>
+                </div>
+                <div class="answers">
+                    <p>
+                        Leave a message in the Contacts page
+                        My email's also in the footer, but restated here for your convenience: <a
+                            href="mailto:ethan.lee1@utahtech.edu">ethan.lee1@utahtech.edu</a>
+                    </p>
                 </div>
             </div>
         </main>
