--- a/milestone6/blog.html
+++ b/milestone6/blog.html
@@ -35,7 +35,13 @@
             </p>
         </section>
         <main>
+            <p>
             /* Write and link to first blog post about your experience with coding: C++, Matlab, Python, and why it's intimidating */
+                <a href>Link to first blog post and/or just Blog Post No. 1 right here</a>
+            Subject: My experience with coding and programming so far - Python, C++, Matlab, and so on. Why they intimidate me, how they were taught to me, what my approach to learning was like, etc.
+            Possible title: A Brief History of Me and Coding
+            By contrast, HTML5 is relatively straightforward and easy to memorize, though maybe the fact it's a front-end language helps. Much of work is already done "for you", in a sense.
+            </p>
         </main>
         <footer>
             Copyright &copy; 2025
