--- a/milestone6/index.html
+++ b/milestone6/index.html
@@ -42,16 +42,13 @@
         </section>
         <main>
             <div id="main">
-                <div>
+                <div class = "mainheader">
                     <h3>Who am I?</h3>
                 </div>
                 <div class = "project">
                     <a href="about.html">
                         <p>
-                        Skate ipsum dolor sit amet, betty boneless judo air hanger griptape.
-                        Sketchy risers boned out boardslide Bill Danforth gap. Camel back
-                        bigspin 360 Japan air fastplant. Wes Humpton. Aerial mute-air Gator
-                        crailtap blunt deck.
+                        Write short blurb about yourself telescoped into 2-3 sentences.
                         </p>
                     </a>
                     <figure class = "photo">
@@ -61,15 +58,13 @@
                         </a>
                     </figure>
                 </div>
-                <div>
+                <div class = "mainheader">
                     <h3>Latest in Projects</h3>
                 </div>
                 <div class = "project">
                     <a href="projects.html">
                         <p>
-                        Megamouth shark sand lance fathead sculpin sand dab kanyu; barramundi
-                        dory ocena perch noodlefish saber-toothed blenny Black triggerfish?
-                        Rainbow trout, "lamprey, longjaw mudsucker, amur pike harelip sucker."
+                        Write stuff about projects here.
                         </p>
                     </a>
                     <figure class = "photo">
@@ -79,15 +74,16 @@
                         </a>
                     </figure>
                 </div>
-                <div>
+                <div class = "mainheader">
                     <h3>Latest in Blogs</h3>
                 </div>
                 <div class = "project">
                     <a href="blog.html">
                         <p>
-                        Extraordinary hand-crafted Toto remarkable Helsinki Fast Lane. The
-                        highest quality Ginza international bureaux K-pop Gaggenau hand-crafted
-                        Winkreative Muji Lufthansa efficient.
+                        See my latest posts and musings about my projects, my research, and the
+                        coding and programming world at large. Games, apps, and puzzles are fun
+                        and all, but writing is my natural habitat. Helps me document my coding
+                        journey and speak a plainer language for y'all too... so there's that.
                         </p>
                     </a>
                     <figure class = "photo">
