--- a/milestone6/projects.html
+++ b/milestone6/projects.html
@@ -35,6 +35,10 @@
         <main>
             /* Put one Python project you make here and briefly annotate it */
 
+            3 different Python projects:
+
+            Plus a COMING SOON sign!
+
             /* Also write a few words about it if you would, please */
             
         </main>
