--- a/milestone6/about.html
+++ b/milestone6/about.html
@@ -20,10 +20,7 @@
                 <li><a href="projects.html"><mark id="projectspage">Projects</mark></a></li>
             </ul>
         </nav>
-        <div id="">
-
-        </div>
-        <div id="">
+        <div id="jr_programmer">
         </div>
         <section id="middle_bar">
             <p>
