--- a/milestone6/about.html
+++ b/milestone6/about.html
@@ -20,7 +20,7 @@
                 <li><a href="projects.html"><mark id="projectspage">Projects</mark></a></li>
             </ul>
         </nav>
-        <div id="jr_programmer">
+        <div id="intro_to_me">
         </div>
         <section id="middle_bar">
             <p>
