--- a/milestone6/blog.html
+++ b/milestone6/blog.html
@@ -21,11 +21,8 @@
                     <li><a href="projects.html"><mark id="projectspage">Projects</mark></a></li>
                 </ul>
             </nav>
-            <div id = "">
-
+            <div id = "jr_programmer">
             </div>
-        <div id = "">
-        </div>
         <section id = "middle_bar">
             <p>
                 After finishing the coding projects, here's where I yap about it.
