--- a/milestone6/blog.html
+++ b/milestone6/blog.html
@@ -21,7 +21,7 @@
                     <li><a href="projects.html"><mark id="projectspage">Projects</mark></a></li>
                 </ul>
             </nav>
-            <div id = "jr_programmer">
+            <div id = "">
             </div>
         <section id = "middle_bar">
             <p>
