--- a/milestone6/index.html
+++ b/milestone6/index.html
@@ -48,7 +48,10 @@
                 <div class = "project">
                     <a href="about.html">
                         <p>
-                        Write short blurb about yourself telescoped into 2-3 sentences.
+                        A brief primer introducing myself, explaining why I created this site, and
+                        discussing what kinds of stuff you can find and what to expect here on Rookie
+                        Coding. Not a programmer by trade, not a coder by night — but I'm learning, and
+                        that's got to count for something.
                         </p>
                     </a>
                     <figure class = "photo">
@@ -64,7 +67,10 @@
                 <div class = "project">
                     <a href="projects.html">
                         <p>
-                        Write stuff about projects here.
+                        Games, apps, and puzzles, oh my! ... Or at least, my best attempts at them.
+                        Don't expect anything too slick or professionally designed, but feel free
+                        to check them out and use them as inspiration for your own projects and
+                        pursuits. We're learnng together, after all!
                         </p>
                     </a>
                     <figure class = "photo">
