--- a/milestone6/about.html
+++ b/milestone6/about.html
@@ -32,22 +32,46 @@
         </section>
         <main>
             <div id="main">
+                <p>
                 <div class="questions">
                     <h3>Who am I?</h3>
                 </div>
+                </p>
                 <div class="answers">
                     <p>
-                        Name: Ethan Lee
-                        State: Minnesota
-                        Currently: Master's student at Utah Tech University
+                        First off, welcome to my site! My name is Ethan, and as you might figure,
+                        I'm the humble owner of Rookie Coding. As the name of my website implies, I'm just
+                        an aspiring beginner coder figuring things out one at a time and building up his
+                        skills piece by piece, despite a lack of natural talent and other stumbling
+                        blocks that come with a completely different set of lingo, practices, and
+                        workspaces than what I'm used to. A bit more context, if you'll permit me:
                     </p>
                     <p>
-                        Taking CompSci in CTE to supplement my skills
-                        Never really a coding guru and was always intimidated,
-                        but you can build cool stuff with coding and it would look good on
-                        my resume: we're a high-tech, wired-up world now
-                        Post photo of Minnesota that you can find in stock photos or whatever
-                        Also have a Wix blog named Rookie De-Fi, which you can check out <a href="">here</a>
+                        Raised in the Great State of Minnesota — 10,000+ lakes, Vikings fandom, and
+                        mountains of snow and metric tons of ice every winter — I attended the
+                        University of St. Thomas for my B.S. in Business Economics (with an Applied
+                        Statistics minor), graduating the May before my family started packing up
+                        moving halfway across the country to the (Equally) Great State of Utah — and
+                        speaking for myself, I haven't looked back since.
+                    </p>
+                    <p>
+                        Having found Utah Tech University and started working on my Master's degree
+                        there, I also figured it'd be wise to take some Computer Science classes on
+                        the side and brush up on a skill I had neglected and left underdeveloped
+                        (despite the technical nature of my undergraduate degree and the modern world
+                        we live in). To be honest, I was never really a coding guru and was always
+                        intimidated by all the jargon and endless lines of code that made all
+                        my favorite apps and software work — but at the same time, the fact coders could
+                        build all kinds of cool stuff with Python in their pocket, C++ in their veins,
+                        or Java in their repertoire wowed me and convinced me it was worth studying (even
+                        if I never mastered it fully). If nothing else, it would also look good on my
+                        resume here in this high-tech, wired-up world we're now living in.
+                    </p>
+                    <p>
+                        And now, here I am, taking my first Utah Tech Comp-Sci class and building this
+                        site as my first major project. It may not be eye-candy or the most prize-worthy
+                        software you've ever laid eyes on, but I'm excited for us to learn and start on
+                        our coding journeys together. So please, do stick around!
                     </p>
                 </div>
                 <div class="questions">
@@ -55,13 +79,26 @@
                 </div>
                 <div class="answers">
                     <p>
-                        Both assignment and opportunity to document my learning journey
-                        Keeps me somewhat accountable on my learning journey and coding projects, too
-                        Getting Master's in Technical Writing, and this provides more practice with an actual
-                        audience than writing memos to my professor (a literal seasoned English PhD, which is a narrow
-                        audience indeed) would
-                        Restating difference between theory and practice debate all over again, but made manifest this
-                        time
+                        As I said above, Rookie Coding was spurred by my first Utah Tech Comp-Sci class,
+                        which focuses on HTML5 and front-end web design. Naturally, this site is proof of
+                        concept and a real-world demonstration of the skills I've acquired in class, and
+                        while it's far from perfect or pristine, it lays a solid foundation that I will
+                        build on in future.
+                    </p>
+                    <p>
+                        Besides fulfilling course requirements, this site also serves as an opportunity to document
+                        my learning journey and share it with others, allowing it to both be of help to fellow
+                        beginner coders with little clue where to start and a potential gateway to collaboration and
+                        community if there's enough interest. If nothing else, it also keeps me somewhat "accountable"
+                        on my learning journey and coding projects: despite my ambition and interest in all the
+                        cool stuff you can do with programming knowledge under your belt, I've long put off actually
+                        building up my skills and let my misgivings and intimidation get the better of me — and now,
+                        that's got to change.
+                    </p>
+                    <p>
+                        Now, I finally have a platform to post my projects and experiments. They may not be as
+                        slick and professional as what professional programmers and software engineers can cook
+                        up with their eyes closed, but at least they're something — and for now, that's enough.
                     </p>
                 </div>
                 <div class="questions">
@@ -69,31 +106,28 @@
                 </div>
                 <div class="answers">
                     <p>
-                        Puzzles, games, and hot takes -- all from an amateur, of course
-                        Don't expect miracles or professional stuff, though.
-                        Also, be patient with me if I'm wrong or off-base about anything!
+                        In short, expect a few amateur-level projects and my first experiments in coding something
+                        meaningful: puzzles, games, and maybe a very rudimentary app or two once I've hit my stride
+                        and am feeling ambitious enough to market or share my content elsewhere. As I am a beginner
+                        (and Rookie Coding is a beginner-oriented site), please don't expect expert-level content
+                        or anything market-ready — I'm not a professional engineer, I don't have a team behind me,
+                        and I may very well go the rest of my life having access to neither.
                     </p>
-                </div>
-                <div class="questions">
-                    <h3>How does this site work?</h3>
-                </div>
-                <div class="answers">
                     <p>
-                        Simple website built with HTML5 for webpages and CSS for external stylesheet
-                        First website I ever built from scratch, so in case the difference between my first try and web
-                        designers' slick, professional branding is apparent... that's why
-                        Ultimately, I'm a simple man. Do more than the bare minimum, though I like to avoid flash,
-                        frills, and other ostentatiousness
+                        That said, I also have a "Blog" page, which is where you can find my blog posts giving
+                        English-language updates and rundowns of the projects, research, and other developments and
+                        miscellaneous thoughts that mark my coding journey or otherwise warrant posting here on Rookie
+                        Coding for everyone's edification. Games and exercises are fun and are the ultimate practical
+                        demonstration of applied, real-world programming skill, but breaking it down and talking shop
+                        in a language we all (presumably) understand — in this case, Good Ol' American English — lends
+                        context and clarification that a finished product or lines of code don't provide on their own.
                     </p>
-                </div>
-                <div class="questions">
-                    <h3>How can you contact me?</h3>
-                </div>
-                <div class="answers">
                     <p>
-                        Leave a message in the Contacts page
-                        My email's also in the footer, but restated here for your convenience: <a
-                            href="mailto:ethan.lee1@utahtech.edu">ethan.lee1@utahtech.edu</a>
+                        For now, Rookie Coding's still new on the scene, so while it's just starting out and while I'm
+                        first branching out, expect a trickle of blog posts and maybe one or two actual coding projects
+                        on the "Projects" page. I intend to deliver and pick up steam as it gets easier, but again, I
+                        am a beginner who's just starting out and has little preexisting skill with coding, so your
+                        patience (and preferably, constructive feedback) would be much appreciated.
                     </p>
                 </div>
             </div>
