--- a/milestone6/blog.html
+++ b/milestone6/blog.html
@@ -21,7 +21,8 @@
                     <li><a href="projects.html"><mark id="projectspage">Projects</mark></a></li>
                 </ul>
             </nav>
-            <div id = "">
+            <div id = "blog_image">
+                
             </div>
         <section id = "middle_bar">
             <p>
