--- a/milestone6/about.html
+++ b/milestone6/about.html
@@ -54,6 +54,15 @@
                         moving halfway across the country to the (Equally) Great State of Utah — and
                         speaking for myself, I haven't looked back since.
                     </p>
+                </div>
+                <div>
+                    <figure id = "great_state">
+                        <a href="pexels-stephen-fischer-84331931-9738583.jpg">
+                            <img src="pexels-stephen-fischer-84331931-9738583.jpg" alt="Welcome to Minnesota"
+                        width="200">
+                    </figure>
+                </div>
+                <div class="answers">
                     <p>
                         Having found Utah Tech University and started working on my Master's degree
                         there, I also figured it'd be wise to take some Computer Science classes on
@@ -85,6 +94,15 @@
                         while it's far from perfect or pristine, it lays a solid foundation that I will
                         build on in future.
                     </p>
+                </div>
+                <div>
+                    <figure id = "why_post">
+                        <a href="pexels-olenkabohovyk-3883857.jpg">
+                            <img src="pexels-olenkabohovyk-3883857.jpg" alt="Smartphone with Question Mark"
+                        width="200">
+                    </figure>
+                </div>
+                <div class="answers">
                     <p>
                         Besides fulfilling course requirements, this site also serves as an opportunity to document
                         my learning journey and share it with others, allowing it to both be of help to fellow
@@ -113,6 +131,15 @@
                         or anything market-ready — I'm not a professional engineer, I don't have a team behind me,
                         and I may very well go the rest of my life having access to neither.
                     </p>
+                </div>
+                <div>
+                    <figure id = "computer_work">
+                        <a href="pexels-divinetechygirl-1181373.jpg">
+                            <img src="pexels-divinetechygirl-1181373.jpg" alt="Woman Working on Laptop"
+                        width="300">
+                    </figure>
+                </div>
+                <div class="answers">
                     <p>
                         That said, I also have a "Blog" page, which is where you can find my blog posts giving
                         English-language updates and rundowns of the projects, research, and other developments and
