--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <li><a href="https://zyobot101.github.io/se1400/milestone4/index.html">Milestone 4</a></li>
             <li><a href="https://zyobot101.github.io/se1400/milestone5/index.html">Milestone 5</a></li>
             <li><a href="https://zyobot101.github.io/se1400/milestone6/index.html">Milestone 6</a></li>
-            <li><a href="milestone7/index.html">Milestone 7</a></li>
+            <li><a href="https://zyobot101.github.io/se1400/milestone7/index.html">Milestone 7</a></li>
         </ul>
     </section>
     <footer>
